force-app/main/default/objects/KakaoConsultDealerCredentials__c/KakaoConsultDealerCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Kakao Consult Dealer Credentials</label>
</CustomObject>