force-app/main/default/objects/KakaoConsultDealerCredentials__c/fields/Channel_Secret__c.field-meta.xml
<CustomField>
    <fullName>Channel_Secret__c</fullName>
    <label>Channel Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>