force-app/main/default/objects/KakaoConsultDealerCredentials__c/fields/Customer_Identify_Url__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identify_Url__c</fullName>
    <label>Customer Identify Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>