force-app/main/default/objects/KakaoConsultDealerCredentials__c/fields/JWT_Token__c.field-meta.xml
<CustomField>
    <fullName>JWT_Token__c</fullName>
    <label>JWT Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>