force-app/main/default/objects/KakaoConsultDealerCredentials__c/fields/Sender_Key__c.field-meta.xml
<CustomField>
    <fullName>Sender_Key__c</fullName>
    <label>Sender Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>